# linearproj

./: .gitignore  README.md  pyproject.toml
linearproj/: Makefile  config-example.yml  config.py  server.py
linearproj/core/: core.py  gpt.py  linear.py
tests/conversations/: conversation1.txt  conversation3.txt
